[gd_scene load_steps=18 format=3 uid="uid://b1aihj4iw6qq6"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_lb4xn"]
[ext_resource type="Texture2D" uid="uid://bebkmhxqk7dtx" path="res://Assets/sprites/Player1_Animation_Walking_Sideways_tira.png" id="1_ox35o"]
[ext_resource type="Texture2D" uid="uid://s6hdp4i0i46w" path="res://Assets/sprites/Player1_Animation_Walking_Front_tira.png" id="2_ncknl"]
[ext_resource type="Texture2D" uid="uid://cf1ibg6btv38r" path="res://Assets/sprites/tech/pointlight.jpeg" id="3_y2qwo"]
[ext_resource type="Material" uid="uid://1v1nhojd0x5x" path="res://resources/planets/waterShader.tres" id="4_q4jqp"]
[ext_resource type="LabelSettings" uid="uid://b6waduloh2k6v" path="res://resources/label.tres" id="5_p7jqf"]
[ext_resource type="Texture2D" uid="uid://cabrq2by7ae75" path="res://Assets/sprites/Player1_Walking_Backview_tira.png" id="5_witrb"]
[ext_resource type="Texture2D" uid="uid://bvu74i0rqnrlf" path="res://Assets/sprites/Player_1_Arrow.png" id="6_kmtn2"]
[ext_resource type="LabelSettings" uid="uid://btubvla44crs5" path="res://resources/label2.tres" id="6_y0and"]
[ext_resource type="Texture2D" uid="uid://cm2bwakj2kws8" path="res://Assets/sprites/Player1_Mining_Sideways_tira.png" id="8_6l7gt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_unwxc"]
size = Vector2(8, 13)

[sub_resource type="Animation" id="Animation_h4l8f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_ncknl")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_h76g6"]
resource_name = "mine_side"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("8_6l7gt")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.333333, 0.666667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_5u18a"]
resource_name = "walk_down"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_ncknl")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5, 0.666667, 0.833333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_sumeg"]
resource_name = "walk_side"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5, 0.666667, 0.833333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_ox35o")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_rnbt5"]
resource_name = "walk_up"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_witrb")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5, 0.666667, 0.833333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k1wbs"]
_data = {
"RESET": SubResource("Animation_h4l8f"),
"mine_side": SubResource("Animation_h76g6"),
"walk_down": SubResource("Animation_5u18a"),
"walk_side": SubResource("Animation_sumeg"),
"walk_up": SubResource("Animation_rnbt5")
}

[node name="Player" type="CharacterBody2D" groups=["player"]]
motion_mode = 1
script = ExtResource("1_lb4xn")

[node name="Sprite2D" type="Sprite2D" parent="."]
light_mask = 2
visibility_layer = 2
position = Vector2(-1.5, -5.5)
texture = ExtResource("2_ncknl")
hframes = 6

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(-1.5, -1.5)
color = Color(0.64, 0.466347, 0.4032, 0.784314)
energy = 2.5
range_z_max = 0
shadow_enabled = true
texture = ExtResource("3_y2qwo")
height = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.5, -2)
shape = SubResource("RectangleShape2D_unwxc")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-0.5, -5.5)
zoom = Vector2(3.5, 3.5)

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]

[node name="ColorRect" type="ColorRect" parent="Camera2D/CanvasLayer"]
material = ExtResource("4_q4jqp")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CanvasLayer2" type="CanvasLayer" parent="Camera2D"]

[node name="Label" type="Label" parent="Camera2D/CanvasLayer2"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
label_settings = ExtResource("5_p7jqf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Camera2D/CanvasLayer2"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 35.0
offset_top = -85.0
offset_right = 75.0
offset_bottom = -35.0
grow_vertical = 0

[node name="Label2" type="Label" parent="Camera2D/CanvasLayer2/VBoxContainer"]
layout_mode = 2
label_settings = ExtResource("6_y0and")
vertical_alignment = 1

[node name="Label3" type="Label" parent="Camera2D/CanvasLayer2/VBoxContainer"]
layout_mode = 2
label_settings = ExtResource("6_y0and")
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_k1wbs")
}

[node name="PointingArrow" type="Node2D" parent="."]
z_index = 1024
z_as_relative = false

[node name="Arrow" type="Sprite2D" parent="PointingArrow"]
light_mask = 8
visibility_layer = 8
position = Vector2(32, 0)
rotation = 1.5708
texture = ExtResource("6_kmtn2")

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(-1.5, -5)
target_position = Vector2(8, 0)
collision_mask = 4
hit_from_inside = true
